src/pages/convert/campaigns/components/ContactCaptureForm/AddContactCaptureForm.less
@import '~@gorgias/design-tokens/dist/css/layout';

:local {
    @grey: var(--neutral-gray-2);
    @darkerGrey: var(--neutral-gray-5);

    .contactWizardDrawer {
        height: 100%;
        display: flex !important;
        flex-direction: column;
    }

    .drawerContent {
        background-color: white;
        height: 100%;
        display: flex;
        flex-direction: column;
    }

    .wizardHeaderContainer {
        padding-bottom: @layout-spacing-s;
    }

    .contactFormWizardStep {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        overflow-y: auto;
        margin-top: @layout-spacing-xs;
    }

    .wizardFooterButtons {
        display: flex;
        gap: @layout-spacing-xs;
        width: 100%;
        padding: @layout-spacing-s !important;
    }

    .buttonsSeparator {
        display: flex;
        flex-grow: 1;
    }

    .resetBtn {
        border: 0;
        background-color: @grey;
        color: @darkerGrey;

        :hover {
            background-color: @grey !important;
            box-shadow: none !important;
            border-color: @grey !important;
        }
    }
}

